# WoWSim

./: .gitignore  .prepare-commit-msg  README.markdown  TODO  WoWSim.hs  wowsim.cabal
AI/: AutoAttack.hs  Info.hs  Warrior.hs
Actions/: Attacks.hs  Common.hs
Types/: Ability.hs  Aura.hs  Buff.hs  Common.hs  Entity.hs  EntityId.hs  Event.hs  Events.hs  Handler.hs  Stats.hs  Talents.hs  World.hs
